BACK-88 This commits primarily adds shared navbar to Click and Cover form, and to entire handex website.             It also fixes the following issues:                - Leak of devise message                -  Logout redirecting to same page where it was invoked                -  Devise logout creating two kinds of requetst: GET, and DELETE depending on the page the logout was invoked                        See the link for details: https://stackoverflow.com/questions/6567863/no-route-matches-get-users-sign-out                        It was actually an issue arising because of lack of javascript dependency: jquery_ujs                - Fixes visual css issue on country select field in the insurance form: resolved with CSS

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -468,3 +468,8 @@ p {
     display: none;
   }
 }
+
+.alert {
+  padding: 0;
+  margin-bottom: 0;
+}
