--- a/app/assets/stylesheets/insurance.scss
+++ b/app/assets/stylesheets/insurance.scss
@@ -15,4 +15,13 @@
  *= require css/demo
  *= require_self
  */
+
 @import "css/themify-icons";
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.form-group select {
+  padding: 8px 18px;
+}
